--- a/homework10/Program1/App.config
+++ b/homework10/Program1/App.config
@@ -10,7 +10,7 @@
   </startup>
 
   <connectionStrings>
-    <add name="OrderDataBase" connectionString="server=localhost;user id=root;password=132325;database=orderDB10" providerName="MySql.Data.MySqlClient" />
+    <add name="OrderDataBase" connectionString="server=localhost;user id=root;password=zbymoyuan;database=orderDB10" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
   <entityFramework>
