--- a/homework10/orderProgram/App.config
+++ b/homework10/orderProgram/App.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="OrderDataBase"
          connectionString=
-         "server=localhost;user id=root;password=132325;database=orderDB10"
+         "server=localhost;user id=root;password=zbymoyuan;database=orderDB10"
          providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
